--- a/console01.csproj
+++ b/console01.csproj
@@ -3,5 +3,14 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <!-- <TargetFramework>net5.0</TargetFramework> -->
   </PropertyGroup>
+
+  <ItemGroup>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Iot.Device.Bindings" Version="1.2.0" />
+    <PackageReference Include="System.Device.Gpio" Version="1.2.0" />
+  </ItemGroup>
 </Project>
